se ajusto la navegacion al momento de pasar de un item a su detalle. pendiente: se queda pendiente al momento de bindear los datos de la vista de detalle.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -32,7 +32,8 @@
         data-name="com.moony.gestorinventario"
         data-id="container"
         data-settings='{"id" : "com.moony.gestorinventario"}'
-        data-handle-validation="true"
     ></div>
 </body>
 </html>
+<!--
+        data-handle-validation="true" -->
